<resources>
    <string name="app_name">TInstaller</string>

    <string name="select_all">Избери всички</string>
    <string name="deselect">Премахни маркиране</string>
    <string name="install">Инсталирай</string>
    <string name="subscribe">Абонирай се</string>

    <string name="error_retrieve_data">Грешка при получаване на данни</string>

    <string name="agree">Съгласен съм</string>
    <string name="agreement">СПОРАЗУМЕНИЕ</string>
    <string name="cancel">Отказ</string>

    <string name="enter_url">Въведете адрес</string>
    <string name="apply">Приложи</string>

    <string name="youtube_chanel_label">КЛИКНЕТЕ за YouTube канала TECHNOZON</string>

    <string name="license">ВНИМАНИЕ.\n\nТОВА ПРИЛОЖЕНИЕ Е ЕЛЕМЕНТАРНА ПРОГРАМА ЗА ЗАРЕЖДАНЕ НА ПРИЛОЖЕНИЯ ОТ ФАЙЛ, ПОСОЧЕН ОТ ПОТРЕБИТЕЛЯ.\n\nПРИЛОЖЕНИЕТО НЕ СЪДЪРЖА ВРЪЗКИ КЪМ ЗАБРАНЕНИ ПРИЛОЖЕНИЯ ИЛИ ФАЙЛОВЕ, КОИТО НАРУШАВАТ АВТОРСКИ ПРАВА ИЛИ СРОДНИ ПРАВА.\n\nКАТО КЛИКНЕТЕ ВЪРХУ БУТОНА „СЪГЛАСИЕ“, ВИЕ ПРИЕМАТЕ УСЛОВИЯТА ЗА ПОЛЗВАНЕ И ПОЕМАТЕ ПЪЛНА ОТГОВОРНОСТ ЗА ВСЯКО ВЪЗМОЖНО НАРУШАВАНЕ НА АВТОРСКИ ПРАВА ИЛИ СРОДНИ ПРАВА.</string>

    <!-- Categories -->
    <string name="category_all">Всички</string>
    <string name="category_useful_links">Полезни връзки</string>
    <string name="category_result">Резултат</string>

    <!-- Search -->
    <string name="search_hint">Търсене по заглавие</string>
    <string name="search">Търси</string>
</resources>
