<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        Header-->
        <LinearLayout
            android:background="@color/colorPrimaryDark"
            android:layout_weight="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:padding="10dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/btnGoYouTube"
            android:background="#B3FF0000"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/youtube_chanel_label" />

        <!--        Content -->
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpCategories"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.PagerTabStrip
                android:id="@+id/ptTitle"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_gravity="top" />
        </androidx.viewpager.widget.ViewPager>

        <!--        Footer-->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_weight="0"
            style="@android:style/DeviceDefault.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerVertical"
            android:orientation="horizontal"
            android:gravity="center"
            android:showDividers="middle">

            <Button
                android:id="@+id/btnSelectAll"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="10sp"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/select_all" />

            <Button
                android:id="@+id/btnDeselect"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="10sp"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/deselect" />

            <Button
                android:id="@+id/btnInstall"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="10sp"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/install" />

            <Button
                android:id="@+id/btnEnterUrl"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="10sp"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_url" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flProgress"
        android:visibility="gone"
        android:background="#BF2B2B2B"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</FrameLayout>