<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        Header-->
        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:padding="10dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--        Menu -->
            <LinearLayout
                android:id="@+id/menu"
                android:paddingTop="5dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnGoYouTube"
                    android:background="#B3FF0000"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/youtube_chanel_label" />

                <Button
                    android:id="@+id/btnSelectAll"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_all" />

                <Button
                    android:id="@+id/btnDeselect"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deselect" />

                <Button
                    android:id="@+id/btnInstall"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/install" />

                <Button
                    android:id="@+id/btnEnterUrl"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_url" />

                <ImageView

                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/qr_technozon" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--        Content -->
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/vpCategories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.viewpager.widget.PagerTabStrip
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_gravity="top" />
                </androidx.viewpager.widget.ViewPager>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/flProgress"
        android:visibility="gone"
        android:background="#BF2B2B2B"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</FrameLayout>
